--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@ body,
 html {
     width: 100%;
     height: 100%;
-    /* font-family: 'Montserrat Alternates', sans-serif; */
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Permanent Marker', cursive;
     background: url(business-computer-contemporary-desk-218863.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -16,18 +15,33 @@ html {
 }
 
 .row {
-    margin-top: 100px;
-    /* height: 100%; */
+    padding-top: 80px;
+    height: 300px;
 }
 
-span {
-    /* color: white; */
-    /* border: 3px solid rgb(214, 10, 10); */
-    /* background-color: rgba(0, 0, 0, 0.336); */
+h1 {
+    font-size: 70px;
+    text-shadow: 3px 3px 5px white;
+}
+
+.head {
+    text-shadow: 3px 3px 5px black;
+}
+.span {
+    color: white;
+    border: 3px solid rgb(214, 10, 10);
+    background-color: rgba(0, 0, 0, 0.336);
     border-right: 0px;
     border-left: 0px;
-    display: block;
-    width: auto;
+}
+
+p {
+    padding: 15px;
+    font-size: 19px;
+}
+
+section {
+    margin-top: 50px;
 }
 
 hr {
@@ -38,6 +52,8 @@ hr {
 
 .btn {
     font-weight: 700;
+    font-size: 25px;
+    font-family: 'Signika', sans-serif;
     border-radius: 100px;
 }
 
@@ -50,4 +66,10 @@ hr {
     background-color: rgb(230, 49, 36);
     border-color: rgb(199, 39, 27);
     border-width: 4px;
+}
+
+.call-to-action {
+    color: white;
+    align-items: center;
+    margin-top: 50px;
 }
